syntax = "proto3";

option go_package = "github.com/vantoan19/Petifies/proto/auth-service/v1";

message HelloWorldRequest {}
message HelloWorldResponse {
    string greeting = 1;
}

service Auth {
    rpc SayHello(HelloWorldRequest) returns (HelloWorldResponse) {}
}